fix scrollbar

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -382,7 +382,6 @@ pre {
     counter-increment: line 0;
     display: grid;
     padding: 0.5rem 0;
-    overflow-x: scroll;
 
     & [data-highlighted-chars] {
       background-color: var(--highlight);
